<resources>
    <string name="app_name">Fake News App</string>
    <string name="hello_world">Hello World</string>
    <string name="tv_ibm_info">IBM Notes Developer in Airport Domodedovo</string>
    <string name="descr_my_photo">My photo</string>
    <string name="descr_ibm_notes">IBM Notes Logo</string>
    <string name="descr_magic">Magic: The Gathering Logo</string>
    <string name="tv_mtg_info">Magic: The Gathering player</string>
    <string name="descr_java">Java Logo</string>
    <string name="tv_java_info">Learn Java</string>
    <string name="about_me">This information about Georgiy. Soon.</string>
    <string name="hint_send_message">Enter a message…</string>
    <string name="button_send_message">SEND MESSAGE</string>
    <string name="descr_my_instagram_link">Feedback to my Instagram page</string>
    <string name="descr_my_vk_link">Feedback to my VK page</string>
    <string name="descr_my_telegram_link">Feedback to my Telegram account</string>
    <string name="error_no_email_app">Mail App is not found!</string>
    <string name="feedback_email_subject">Feedback</string>
    <string name="descr_image_news">News item image</string>

</resources>
